# brush-remotion-video

./: .gitignore  CHANGELOG.md  FIELD-LOG.md  LICENSE  MIGRATION-PLAN.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
pipeline/: README.md  pyproject.toml
pipeline/brushvid/: __init__.py  audio.py  audit.py  background.py  bgm.py  cosmic_random_routes.py  cues.py  delivery.py  fill_routes.py  layers.py  layout.py  mix.py  motion.py  piano_auto_bgm.py  piano_bgm.py  piano_render.py  project.py  props.py  public_assets.py  qa.py  render.py  routes.py  stable_audio.py  stt.py  sync.py  tts.py  tts_contract.py  tts_manifest.py  voice_presets.py
pipeline/brushvid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/brushvid/tts_engines/: __init__.py  base.py  melo.py  qwen.py  qwen3_customvoice_worker.py  qwen3_worker.py  registry.py  supertonic.py
pipeline/tests/: test_audio.py  test_audio_mix.py  test_audit.py  test_background.py  test_bgm.py  test_build.py  test_camera_prompt_catalog.py  test_cosmic_random_brush.py  test_cues.py  test_delivery.py  test_gallery.py  test_install_skills.py  test_layout.py  test_motion.py  test_pen.py  test_pen_brush.py  test_pen_brush_qa.py  test_pen_brush_sync.py  test_piano_auto_bgm.py  test_piano_bgm.py  test_piano_bgm_cli.py  test_project.py  test_promo_widget_catalog.py  test_props.py  test_render_qa.py  test_replace_bgm.py  test_routes.py  test_seamless_short.py  test_shorts.py  test_skill_catalog.py  test_stable_audio.py  test_stt.py  test_sync.py  test_tts.py  test_tts_contract.py  test_voice_presets.py  test_zones.py
(+437 files in other folders)
