[project]
name = "brushvid"
version = "0.1.0"
description = "brush_remotion_video 파이프라인 — 이미지 1장을 routes JSON + 검증된 render-props로 변환"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "numpy",
    "scipy",
    "scikit-image",
    "soundfile",
    "pyyaml",
    "jsonschema",
]

[project.optional-dependencies]
dev = ["pytest"]
tts = ["supertonic==1.3.1"]
tts-melo = [
    # PyPI only exposes 0.1.1; tts-bench uses the reproducible upstream commit
    # whose package metadata is melotts 0.1.2.
    "melotts @ git+https://github.com/myshell-ai/MeloTTS.git@209145371cff8fc3bd60d7be902ea69cbdb7965a",
    "mecab-python3==1.0.9",
    "python-mecab-ko-dic==2.1.1.post2",
    "g2pkk==0.1.2",
    "unidic==1.1.0",
    "unidic-lite==1.0.8",
    "fugashi==1.3.0",
]
tts-qwen = ["qwen-tts==0.1.1"]
stt = ["faster-whisper"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brushvid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
